chore(java, backend): upgrade backend to java 17
Rewrite some old Java 11 API calls in the ors backend code, migrating them to Java 17 standards.