@@ -19,15 +19,15 @@ public class ParameterValueException extends StatusCodeException  {
    private static final long serialVersionUID = 507243355121086541L;
 
    public ParameterValueException(int errorCode, String paramName) {
-	   super(StatusCode.BAD_REQUEST, errorCode, String.format("Parameter '%s' has incorrect value or format.", paramName));
+	   super(StatusCode.BAD_REQUEST, errorCode, "Parameter '%s' has incorrect value or format.".formatted(paramName));
    }
    
    public ParameterValueException(int errorCode, String paramName, String paramValue) {
-	   super(StatusCode.BAD_REQUEST, errorCode, String.format("Parameter '%s' has incorrect value of '%s'.", paramName, paramValue));
+	   super(StatusCode.BAD_REQUEST, errorCode, "Parameter '%s' has incorrect value of '%s'.".formatted(paramName, paramValue));
    }
 
    public ParameterValueException(int errorCode, String paramName, String paramValue, String extraInformation) {
-        super(StatusCode.BAD_REQUEST, errorCode, String.format("Parameter '%s' has incorrect value of '%s'. %s", paramName, paramValue, extraInformation));
+        super(StatusCode.BAD_REQUEST, errorCode, "Parameter '%s' has incorrect value of '%s'. %s".formatted(paramName, paramValue, extraInformation));
    }
    
    public ParameterValueException(String paramName)
