@@ -16,10 +16,10 @@ package org.heigit.ors.isochrones.statistics.postgresql;
 import com.graphhopper.util.Helper;
 import com.zaxxer.hikari.HikariConfig;
 import com.zaxxer.hikari.HikariDataSource;
+import org.apache.log4j.Logger;
 import org.heigit.ors.exceptions.InternalServerException;
 import org.heigit.ors.isochrones.Isochrone;
 import org.heigit.ors.isochrones.IsochronesErrorCodes;
-import org.apache.log4j.Logger;
 import org.heigit.ors.isochrones.statistics.StatisticsProvider;
 import org.postgresql.ds.PGSimpleDataSource;
 
@@ -76,7 +76,7 @@ public class PostgresSQLStatisticsProvider implements StatisticsProvider {
         String port = "5432";
         if (parameters.containsKey("port"))
             port = Integer.toString((Integer) parameters.get("port"));
-        config.setJdbcUrl(String.format("jdbc:postgresql://%s:%s/%s", parameters.get("host"), port, parameters.get("db_name")));
+        config.setJdbcUrl("jdbc:postgresql://%s:%s/%s".formatted(parameters.get("host"), port, parameters.get("db_name")));
         config.setDataSourceClassName(PGSimpleDataSource.class.getName());
         config.addDataSourceProperty("databaseName", parameters.get("db_name"));
         config.addDataSourceProperty("user", parameters.get("user"));
