@@ -13,13 +13,12 @@
  */
 package org.heigit.ors.routing;
 
+import org.apache.log4j.Logger;
+import org.heigit.ors.util.RuntimeUtility;
+
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
-
-import org.apache.log4j.Logger;
-
-import org.heigit.ors.util.RuntimeUtility;
 
 public class RoutingProfilesCollection {
 	private final HashMap<Integer, RoutingProfile> routeProfiles;
@@ -153,9 +152,9 @@ public class RoutingProfilesCollection {
 			i++;
 			long profileMemory = profile.getMemoryUsage();
 			totalProfilesMemory += profileMemory;
-			logger.info(String.format("[%d] %s (%.1f%%)", i, RuntimeUtility.getMemorySize(profileMemory), ((double)profileMemory/totalUsedMemory)*100));
+			logger.info("[%d] %s (%.1f%%)".formatted(i, RuntimeUtility.getMemorySize(profileMemory), ((double) profileMemory / totalUsedMemory) * 100));
 		}
-		logger.info(String.format("Total: %s (%.1f%%)", RuntimeUtility.getMemorySize(totalProfilesMemory), ((double)totalProfilesMemory/totalUsedMemory)*100));
+		logger.info("Total: %s (%.1f%%)".formatted(RuntimeUtility.getMemorySize(totalProfilesMemory), ((double) totalProfilesMemory / totalUsedMemory) * 100));
 		logger.info("========================================================================");
 	}
 }
